--- a/about.html
+++ b/about.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Dự án 4</h1>
-    <h2>Sửa lần 1</h2>
-    <h2>Sửa lần àasfasfsafsfd</h2>
+    <h1>About</h1>
   </body>
 </html>
